Video Sequence Editor: problem using cut on a strip with a custom proxy file. #25608

Closed
opened 2011-01-12 21:25:17 +01:00 by Francisco Jáquez · 7 comments

%%%Blender crashes after undo (ctrl + z) a soft cut or hard cut on a strip using a custom proxy file.

AND

If you don't undo and instead delete a part of the strip, blender disables the proxy and you need to save and restart blender to have the proxy working again.

CRASH #1:

  • Load movie strip
  • Enable proxy and load a custom proxy strip.
  • Set proxy render to "Proxy size 50%"
  • Hard cut or soft cut a part of the strip
  • press ctr + z to undo
  • CRASH!

CRASH #2:

  • Same steps as crash #1 but don't press ctr + z (undo)
  • After the hard cut or soft cut delete a part of the strip
  • click in some part of the remaining strip (the proxy is gone in the preview)
  • Save and close blender (or only close blender)
  • CRASH!

Video files used:

Original videofile:
* Avi file
* size: 1280 x 720
* codec: h.264

Proxy file:
* Avi file
* size: 640 x 360
* codec: MJPG (JPG)


SYSTEM:
Windows 7 ultimate 64 bits.
Blender 2.56a, 32 bits (2.56.0 r34076, official release)
Nvidia 7800GT (256 MB)
2GB RAM
3 GHz Intel Dual core (E8400) processor.

Sorry for my english (I speak spanish)%%%

%%%Blender crashes after undo (ctrl + z) a soft cut or hard cut on a strip using a custom proxy file. AND If you don't undo and instead delete a part of the strip, blender disables the proxy and you need to save and restart blender to have the proxy working again. CRASH #1: * Load movie strip * Enable proxy and load a custom proxy strip. * Set proxy render to "Proxy size 50%" * Hard cut or soft cut a part of the strip * press ctr + z to undo * CRASH! CRASH #2: * Same steps as crash #1 but don't press ctr + z (undo) * After the hard cut or soft cut delete a part of the strip * click in some part of the remaining strip (the proxy is gone in the preview) * Save and close blender (or only close blender) * CRASH! Video files used: Original videofile: * Avi file * size: 1280 x 720 * codec: h.264 Proxy file: * Avi file * size: 640 x 360 * codec: MJPG (JPG) --- SYSTEM: Windows 7 ultimate 64 bits. Blender 2.56a, 32 bits (2.56.0 r34076, official release) Nvidia 7800GT (256 MB) 2GB RAM 3 GHz Intel Dual core (E8400) processor. Sorry for my english (I speak spanish)%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I'm trying to upload a rar file (2.67 MB) with the blend and video files, but I get this error: "Missing Parameters".%%%

%%%I'm trying to upload a rar file (2.67 MB) with the blend and video files, but I get this error: "Missing Parameters".%%%
Member

%%%Fransisco: try to add the attachment after typing text, that should work%%%

%%%Fransisco: try to add the attachment *after* typing text, that should work%%%

%%%Ok thanks. I'm uploading the file with this message. %%%

%%%Ok thanks. I'm uploading the file with this message. %%%
Member

%%%Peter, could you check on this?%%%

%%%Peter, could you check on this?%%%
Member

%%%fix is in SVN.

Cheers,
Peter%%%

%%%fix is in SVN. Cheers, Peter%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#25608
No description provided.