This fixes: [#25608] Video Sequence Editor: problem using cut on a strip with a custom proxy file.